kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo
  name: todo
  namespace: maximilian-volk
spec:
  clusterIP: 10.245.100.10
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: port
    nodePort: 32042
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: todo
  sessionAffinity: None
  type: NodePort
