kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: maximilian-volk
spec:
  ingressClassName: nginx
  rules:
    - host: maximilian-volk.dhbw.schoeppi5.de
      http:
        paths:
          - backend:
              service:
                name: todo
                port:
                  number: 8080
            path: /
            pathType: Prefix
